--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="circle">3</div>
         <div class="circle">4</div>
       </div>
-      <div class="context"></div>
+      <div class="content"></div>
       <button class="btn" id="prev" disabled>Prev</button>
       <button class="btn" id="next">Next</button>
     </div>
